# cpp_task1

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  akas.tsv  basics.tsv  main.cpp  principals.tsv
.github/workflows/: ci.yml
include/: movie_id_finder.h  title_by_character_finder.h
src/: CMakeLists.txt  movie_id_finder.cpp  title_by_character_finder.cpp
tests/: CMakeLists.txt  test_akas.tsv  test_notEnoughColumns.tsv  test_principals.tsv  tests.cpp
